--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<!--
+  Created by Zachariah Albers on 7/14/18.
+  Copyright © 2018 Zachariah Albers. All rights reserved.
+ -->
+
 
 <!doctype html>
 <html lang="en">
@@ -17,18 +22,18 @@
   <body>
     <!--
     Additions to make:
-    - 'See more' appears when you mouse over a project
-
-    - in js add "shadow over project and 'Click to see more'  "
+    -
 
     -->
 
-      <div class="jumbotron jumbotron-fluid">
+
         <div class="container">
+          <br>
+          <br>
           <h1 class="display-4 text-right">
             Hello, my name is <span class="display-3 mainTextColor">Zachariah Albers</span></h1>
 
-
+          <br>
           <div class="row">
             <div class="col col-sm-8 col-12">
               <p class="h4 font-weight-light text-left">
@@ -37,8 +42,10 @@
             <div class="col-sm">
             </div>
           </div>
+          <br>
+          <br>
         </div>
-      </div>
+
 
       <!-- Main Navigation Bar  -->
       <div class="container-fluid ">
