--- a/projects.html
+++ b/projects.html
@@ -1,3 +1,8 @@
+<!--
+ Created by Zachariah Albers on 7/14/18.
+ Copyright © 2018 Zachariah Albers. All rights reserved.
+ -->
+
 
 <!doctype html>
 <html lang="en">
@@ -69,32 +74,32 @@
       <div class="row parentTag">
 
 
-        <!--Highlighted Projects: Project 1  -->
-        <div class="col-md d-flex justify-content-center align-items-center project ios-project web-dev-project mb-5">
+        <!--All Projects: Turtle Patrol   -->
+        <div class="col-md d-flex justify-content-center align-items-center project mb-5">
           <div class="card shadow-sm" style="width: 18rem; height: 30rem;">
 
             <!--Link to full Project Desription  -->
-            <div class="card-body" data-toggle="modal" data-target="#projectModal1">
+            <div class="card-body" data-toggle="modal" data-target="#Turtle-Patrol-project">
 
               <!-- Project: Image  -->
-              <img src="./imgs/TheNannyShackWebsite.jpg" class="img-fluid">
-
+              <img src="./imgs/projects/TurtlePatrol-img.png" class="img-fluid rounded">
+              <br>
+              <br>
               <!-- Project: Title  -->
-              <h5 class="card-title">The Nanny Shack</h5>
+              <h5 class="card-title">Turtle Patrol</h5>
 
               <!-- Project: Brief Descrption -->
-              <p class="card-text"> A prototype website build for a social enterprise that aims to help parents who are struggling to find affordable and flexible daycare, as well as nannies who are struggling to find secure job employment..</p>
+              <p class="card-text"> A simple 2D retro-style side scroller developed in Python during my first year. Contains randomly generated potholes, aliens, and turtles to serve as obstacles... </p>
             </div>
 
             <!--Project: Tags  -->
             <div class="card-footer">
-              <!-- Web Developement Tag  -->
-              <button type="button" class="btn btn-primary btn-sm web-development-btn" style="font-size : 0.6rem">Web Development</button>
               <!-- iOS Tag  -->
-              <button type="button" class="btn btn-primary btn-sm iOS-btn" style="font-size : 0.6rem">iOS</button>
+              <!-- <button type="button" class="btn btn-primary btn-sm iOS-btn" style="font-size : 0.6rem">iOS</button> -->
             </div>
           </div>
         </div>
+
 
         <!--Highlighted Projects: Project 2  -->
         <div class="col-md d-flex justify-content-center align-items-center project enti-project ui-design-project mb-5">
@@ -219,12 +224,12 @@
     <!-- Project: Full Descriptions -->
 
 
-    <!-- Project 1:   -->
-    <div class="modal fade" id="projectModal1" tabindex="-1" role="dialog" aria-labelledby="modalLabel1" aria-hidden="true">
+    <!-- Turtle Patrol   -->
+    <div class="modal fade" id="Turtle-Patrol-project" tabindex="-1" role="dialog" aria-labelledby="TP-label" aria-hidden="true">
       <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h2 class="modal-title" id="modalLabel1">The Nanny Shack</h2>
+            <h2 class="modal-title" id="TP-label">Turtle Patrol</h2>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
@@ -234,15 +239,19 @@
             <p class="modal-text">A prototype website build for a social enterprise that aims to help parents who are struggling to find affordable and flexible daycare, as well as nannies who are struggling to find secure job employment..</p>
 
 
-            ...
-            <img class="card-img-top" src="./imgs/bulb-s.png" alt="Card image cap">
+            <img class="card-img-top" src="./imgs/giphy1.gif">
           </div>
           <div class="modal-footer">
+            <button class="btn btn-secondary"><img src="./imgs/Github-Icon.png" style="height: 1.5rem; width: 1.5rem" href="https://github.com/zachalbers/TurtlePatrolGame" target="_blank"> See the Repository</button>
+
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
           </div>
         </div>
       </div>
     </div>
+
+
+    <!-- More Descriptions Here   -->
 
 
 
