--- a/about.html
+++ b/about.html
@@ -1,3 +1,8 @@
+<!--
+   Created by Zachariah Albers on 7/14/18.
+   Copyright © 2018 Zachariah Albers. All rights reserved. 
+ -->
+
 <!doctype html>
 <html lang="en">
   <head>
