Changed Project tags

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="extraCss.css" type="text/css">
   </head>
-  <body>
+  <body class="bg-light">
     <!--
     Additions to make:
     -
@@ -168,11 +168,33 @@ data-container="body" data-toggle="popover" data-placement="top" data-content="C
 <!-- About Me Container -->
     <div class="container px-3">
       <h3 class="border-bottom">About Me:</h3>
-
+      <div class="row">
+        <div class="col col-md-6 col-lg-7 col-12">
+          <p>This is a paragraph</p>
+        </div>
+        <div class="col col-md-6 col-lg-5 col-12">
+          <img src="./imgs/ZachAlbers.jpg" class="img-fluid rounded">
+        </div>
+      </div>
     </div>
 
+    <!-- Overview of Skills Container -->
     <div class="container my-5 px-3">
-      <h3 class="border-bottom">Highlighted Projects:</h3>
+      <h3 class="border-bottom">Overview of Skills:</h3>
+
+      <div class="row">
+
+        <!-- Skills -->
+        <div class="col col-md-6">
+          <p>Hello</p>
+
+        </div>
+        <div class="col col-md-6">
+          <p>Hello</p>
+        </div>
+
+
+      </div>
     </div>
 
     <div class="container-fluid my-5 py-5">
@@ -234,6 +256,14 @@ data-container="body" data-toggle="popover" data-placement="top" data-content="C
     })
 
     </script>
+
+    <script>
+      $(document).ready(function(){
+        $(".row").removeClass("pageLoadOffset");
+      });
+
+    </script>
+
     <script type="text/javascript" src="indexFile.js">
 
     </script>
