--- a/projects.html
+++ b/projects.html
@@ -15,25 +15,29 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="extraCss.css" type="text/css">
 
+    <script type="text/javascript" src="screenPosition.js" defer></script>
+
     <title>Zachariah Albers - Portfolio</title>
   </head>
-  <body>
+  <body  class="bg-light">
 
-    <div class="jumbotron jumbotron-fluid">
-      <div class="container">
-        <h1 class="display-4 text-right">
-          Hello, my name is <span class="display-3 mainTextColor">Zachariah Albers</span></h1>
+    <div class="container">
+      <br>
+      <br>
+      <h1 class="display-4 text-right">
+        Hello, my name is <span class="display-3 mainTextColor">Zachariah Albers</span></h1>
 
-
-        <div class="row">
-          <div class="col col-sm-8 col-12">
-            <p class="h4 font-weight-light text-left">
-              I am a third-year Commerce and Computer Science student interersted in <span class="secondaryTextColor font-weight-bold">iOS</span> development, <span class="secondaryTextColor font-weight-bold">Front-End Web</span> development, and <span class="secondaryTextColor font-weight-bold">Entrepreneurship</span></p>
-          </div>
-          <div class="col-sm">
-          </div>
+      <br>
+      <div class="row">
+        <div class="col col-sm-8 col-12">
+          <p class="h4 font-weight-light text-left">
+            I am a third-year Commerce and Computer Science student interersted in <span class="secondaryTextColor font-weight-bold">iOS</span> development, <span class="secondaryTextColor font-weight-bold">Front-End Web</span> development, and <span class="secondaryTextColor font-weight-bold">Entrepreneurship</span></p>
+        </div>
+        <div class="col-sm">
         </div>
       </div>
+      <br>
+      <br>
     </div>
 
     <!-- Main Navigation Bar  -->
@@ -49,25 +53,50 @@
         </nav>
       </div>
     </div>
+    <br>
+    <br>
+    <br>
 
 
-      <h3 class="container-fluid">
+
+
+      <!-- <h3 class="container-fluid">
       Projects that I have undertaken
-      <small class="text-dark">.</small>
-      </h3>
-    </div>
+      <small class="text-dark">Sort by Tags:.</small>
+      </h3> -->
 
-    <div class="container">
-      <div class="row">
-        <nav class="nav">
-          <a class="nav-link h5 text-primary" id="all-btn">All</a>
-          <a class="nav-link h5 text-primary iOS-btn">iOS</a>
-          <a class="nav-link h5 text-primary web-development-btn">Web Development</a>
-          <a class="nav-link h5 text-primary enti-btn">Entrepreneurship</a>
-          <a class="nav-link h5 text-primary ui-design-btn">UI Design</a>
-        </nav>
+
+    <div class="container d-flex justify-content-center">
+        <ul class="nav nav-pills">
+          <li class="nav-item">
+            <button name="all" class="btn btn-primary active mr-2 all-btn" id="all-btn">All</button>
+          </li>
+          <li class="nav-item">
+            <button type="button" class="btn btn-outline-primary mr-2 ios-btn" id="ios-btn" name="ios">iOS</button>
+          </li>
+          <li class="nav-item">
+            <button name="web-dev" type="button" class="btn btn-outline-primary mr-2 web-dev-btn" id="web-dev-btn">Web Development</button>
+          </li>
+          <li class="nav-item">
+            <button name="enti" type="button" class="btn btn-outline-primary mr-2 enti-btn" id="enti-btn">Entrepreneurship</button>
+          </li>
+          <li class="nav-item">
+            <button name="ui-design" type="button" class="btn btn-outline-primary mr-2 ui-design-btn" id="ui-design-btn">UI Design</button>
+          </li>
+          <li class="nav-item">
+            <button name="python" type="button" class="btn btn-outline-primary mr-2 python-btn" id="python-btn">Python</button>
+          </li>
+          <li class="nav-item">
+            <button name="java" type="button" class="btn btn-outline-primary mr-2 java-btn" id="java-btn">Java</button>
+          </li>
+          <li class="nav-item">
+            <button name="backend" type="button" class="btn btn-outline-primary mr-2 backend-btn" id="backend-btn">Backend</button>
+          </li>
+        </ul>
       </div>
-    </div>
+
+
+
 
 
     <div class="container mt-4">
@@ -75,7 +104,7 @@
 
 
         <!--All Projects: Turtle Patrol   -->
-        <div class="col-md d-flex justify-content-center align-items-center project mb-5">
+        <div class="col-md d-flex justify-content-center align-items-center all-project python-project mb-5">
           <div class="card shadow-sm" style="width: 18rem; height: 30rem;">
 
             <!--Link to full Project Desription  -->
@@ -94,26 +123,26 @@
 
             <!--Project: Tags  -->
             <div class="card-footer">
-              <!-- iOS Tag  -->
-              <!-- <button type="button" class="btn btn-primary btn-sm iOS-btn" style="font-size : 0.6rem">iOS</button> -->
+              <!-- Python Tag  -->
+              <button name="python" type="button" class="btn btn-primary btn-sm python-btn" style="font-size : 0.6rem">Python</button>
             </div>
           </div>
         </div>
 
 
-        <!--Highlighted Projects: Project 2  -->
-        <div class="col-md d-flex justify-content-center align-items-center project enti-project ui-design-project mb-5">
+        <!--Highlighted Projects: Build A Beer  -->
+        <div class="col-md d-flex justify-content-center align-items-center all-project enti-project ui-design-project mb-5">
           <div class="card shadow-sm" style="width: 18rem; height: 30rem;">
 
             <!--Link to full Project Desription  -->
-            <div class="card-body" data-toggle="modal" data-target="#projectModal1">
+            <div class="card-body" data-toggle="modal" data-target="#BuildABeer-project">
 
               <!-- Project: Image  -->
               <img src="./imgs/buildABeer.png
               " class="img-fluid">
 
               <!-- Project: Title  -->
-              <h5 class="card-title">The Nanny Shack</h5>
+              <h5 class="card-title">Build A Beer</h5>
 
               <!-- Project: Brief Descrption -->
               <p class="card-text"> A prototype website build for a social enterprise..</p>
@@ -121,17 +150,71 @@
 
             <!--Project: Tags  -->
             <div class="card-footer">
-              <!-- Entrepreneurship Tag  -->
-              <button type="button" class="btn btn-primary btn-sm enti-btn" style="font-size : 0.6rem">Entrepreneurship</button>
               <!-- UI Design Tag  -->
-              <button type="button" class="btn btn-primary btn-sm ui-design-btn" style="font-size : 0.6rem">UI Design</button>
+              <button name="ui-design" type="button" class="btn btn-primary btn-sm ui-design-btn" style="font-size : 0.6rem">UI Design</button>
+              <!-- Entrepreneurship Tag  -->
+              <button name="enti" type="button" class="btn btn-primary btn-sm enti-btn" style="font-size : 0.6rem">Entrepreneurship</button>
 
             </div>
           </div>
         </div>
 
+        <!--Highlighted Projects: Neural Network Number Classifier  -->
+        <div class="col-md d-flex justify-content-center align-items-center all-project python-project mb-5">
+          <div class="card shadow-sm" style="width: 18rem; height: 30rem;">
+
+            <!--Link to full Project Desription  -->
+            <div class="card-body" data-toggle="modal" data-target="#NeuralNet-project">
+
+              <!-- Project: Image  -->
+              <img src="./imgs/projects/NeuralNet1.png
+              " class="img-fluid rounded">
+
+              <!-- Project: Title  -->
+              <h5 class="card-title">Neural Network Number Classifier</h5>
+
+              <!-- Project: Brief Descrption -->
+              <p class="card-text"> A Neural Network Number Classifier built in Python..</p>
+            </div>
+
+            <!--Project: Tags  -->
+            <div class="card-footer">
+              <!-- Python Tag  -->
+              <button name="python" type="button" class="btn btn-primary btn-sm python-btn" style="font-size : 0.6rem">Python</button>
+            </div>
+          </div>
+        </div>
+
+        <!--Highlighted Projects: UniMap + Map Builder  -->
+        <div class="col-md d-flex justify-content-center align-items-center all-project backend-project java-project mb-5">
+          <div class="card shadow-sm" style="width: 18rem; height: 30rem;">
+
+            <!--Link to full Project Desription  -->
+            <div class="card-body" data-toggle="modal" data-target="#MapBuilder-project">
+
+              <!-- Project: UniMap + Map Builder  -->
+              <img src="./imgs/projects/MapBuilder2.png
+              " class="img-fluid rounded">
+
+              <!-- Project: Title  -->
+              <h5 class="card-title">UniMap + Map Builder</h5>
+
+              <!-- Project: Brief Descrption -->
+              <p class="card-text"> UniMap and Map Builder built in Python..</p>
+            </div>
+
+            <!--Project: Tags  -->
+            <div class="card-footer">
+              <!-- Java Tag  -->
+              <button name="java" type="button" class="btn btn-primary btn-sm java-btn" style="font-size : 0.6rem">Java</button>
+              <!-- Backend Tag  -->
+              <button name="backend" type="button" class="btn btn-primary btn-sm backend-btn" style="font-size : 0.6rem">Backend</button>
+            </div>
+          </div>
+        </div>
+
         <!--Highlighted Projects: Project 3  -->
-        <div class="col-md d-flex justify-content-center align-items-center project ios-project mb-5">
+        <div class="col-md d-flex justify-content-center align-items-center all-project ios-project mb-5">
           <div class="card shadow-sm" style="width: 18rem; height: 30rem;">
 
             <!--Link to full Project Desription  -->
@@ -151,13 +234,39 @@
             <div class="card-footer">
 
               <!-- iOS Tag  -->
-              <button type="button" class="btn btn-primary btn-sm iOS-btn" style="font-size : 0.6rem">iOS</button>
+              <button name="ios" type="button" class="btn btn-primary btn-sm ios-btn" style="font-size : 0.6rem">iOS</button>
+            </div>
+          </div>
+        </div>
+
+        <!--Highlighted Projects: Project 3  -->
+        <div class="col-md d-flex justify-content-center align-items-center all-project ios-project mb-5">
+          <div class="card shadow-sm" style="width: 18rem; height: 30rem;">
+
+            <!--Link to full Project Desription  -->
+            <div class="card-body" data-toggle="modal" data-target="#projectModal1">
+
+              <!-- Project: Image  -->
+              <img src="./imgs/TheNannyShackWebsite.jpg" class="img-fluid">
+
+              <!-- Project: Title  -->
+              <h5 class="card-title">The Nanny Shack</h5>
+
+              <!-- Project: Brief Descrption -->
+              <p class="card-text"> A prototype website build for a social enterprise that aims to help parents who are struggling to find affordable and flexible daycare, as well as nannies who are struggling to find secure job employment..</p>
+            </div>
+
+            <!--Project: Tags  -->
+            <div class="card-footer">
+
+              <!-- iOS Tag  -->
+              <button name="ios" type="button" class="btn btn-primary btn-sm ios-btn" style="font-size : 0.6rem">iOS</button>
             </div>
           </div>
         </div>
 
         <!--Highlighted Projects: Project 4  -->
-        <div class="col-md d-flex justify-content-center align-items-center project ios-project web-dev-project mb-5">
+        <div class="col-md d-flex justify-content-center align-items-center all-project ios-project web-dev-project mb-5">
           <div class="card shadow-sm" style="width: 18rem; height: 30rem;">
 
             <!--Link to full Project Desription  -->
@@ -176,16 +285,16 @@
             <!--Project: Tags  -->
             <div class="card-footer">
               <!-- Web Developement Tag  -->
-              <button type="button" class="btn btn-primary btn-sm web-development-btn" style="font-size : 0.6rem">Web Development</button>
+              <button name="web-dev" type="button" class="btn btn-primary btn-sm web-dev-btn" style="font-size : 0.6rem">Web Development</button>
               <!-- iOS Tag  -->
-              <button type="button" class="btn btn-primary btn-sm iOS-btn" style="font-size : 0.6rem">iOS</button>
+              <button name="ios" type="button" class="btn btn-primary btn-sm ios-btn" style="font-size : 0.6rem">iOS</button>
             </div>
           </div>
         </div>
 
         <!--Highlighted Projects: Project 5  -->
         <!--Project: Type of Project in classes  -->
-        <div class="col-md d-flex justify-content-center align-items-center project web-dev-project ui-design-project mb-5">
+        <div class="col-md d-flex justify-content-center align-items-center all-project web-dev-project ui-design-project mb-5">
           <div class="card shadow-sm" style="width: 18rem; height: 30rem;">
 
             <!--Link to full Project Desription  -->
@@ -204,9 +313,9 @@
             <!--Project: Tags  -->
             <div class="card-footer">
               <!-- Web Developement Tag  -->
-              <button type="button" class="btn btn-primary btn-sm web-development-btn" style="font-size : 0.6rem">Web Development</button>
+              <button name="web-dev" type="button" class="btn btn-primary btn-sm web-dev-btn" style="font-size : 0.6rem">Web Development</button>
               <!-- UI Design Tag  -->
-              <button type="button" class="btn btn-primary btn-sm ui-design-btn" style="font-size : 0.6rem">UI Design</button>
+              <button name="ui-design" type="button" class="btn btn-primary btn-sm ui-design-btn" style="font-size : 0.6rem">UI Design</button>
             </div>
 
           </div>
@@ -221,7 +330,7 @@
     </div>
 
 
-    <!-- Project: Full Descriptions -->
+    <!-- Project: Build A Beer -->
 
 
     <!-- Turtle Patrol   -->
@@ -229,7 +338,11 @@
       <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <div class="modal-header">
+
+            <!-- Project: Title  -->
             <h2 class="modal-title" id="TP-label">Turtle Patrol</h2>
+
+            <!-- Button: closes window  -->
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
@@ -242,13 +355,112 @@
             <img class="card-img-top" src="./imgs/giphy1.gif">
           </div>
           <div class="modal-footer">
-            <button class="btn btn-secondary"><img src="./imgs/Github-Icon.png" style="height: 1.5rem; width: 1.5rem" href="https://github.com/zachalbers/TurtlePatrolGame" target="_blank"> See the Repository</button>
+            <!-- Button opens new page showing repository -->
+            <a class="btn btn-secondary"href="https://github.com/zachalbers/TurtlePatrolGame" target="_blank"><img src="./imgs/Github-Icon.png" style="height: 1.5rem; width: 1.5rem"> See the Repository</a>
 
+            <!-- Button: closes window  -->
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
           </div>
         </div>
       </div>
     </div>
+
+    <!-- Build A Beer   -->
+    <div class="modal fade" id="BuildABeer-project" tabindex="-1" role="dialog" aria-labelledby="BAB-label" aria-hidden="true">
+      <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+
+            <!-- Project: Title  -->
+            <h2 class="modal-title" id="BAB-label">Build A Beer</h2>
+
+            <!-- Button: closes window  -->
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+
+            <p class="modal-text"> Build A Beer..</p>
+
+
+            <img class="card-img-top" src="./imgs/giphy1.gif">
+          </div>
+          <div class="modal-footer">
+
+            <!-- Button: closes window  -->
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Neural Network Number Classifier   -->
+    <div class="modal fade" id="NeuralNet-project" tabindex="-1" role="dialog" aria-labelledby="NN-label" aria-hidden="true">
+      <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+
+            <!-- Project: Neural Network Number Classifier  -->
+            <h2 class="modal-title" id="NN-label">Neural Network Number Classifier</h2>
+
+            <!-- Button: closes window  -->
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+
+            <p class="modal-text"> This is a Neural Network Number Classifier!..</p>
+
+
+            <img class="card-img-top" src="./imgs/giphy1.gif">
+          </div>
+          <div class="modal-footer">
+            <!-- Button opens new page showing repository -->
+            <a class="btn btn-secondary"href="https://github.com/zachalbers/MNIST-Classifier-Neural-Network" target="_blank"><img src="./imgs/Github-Icon.png" style="height: 1.5rem; width: 1.5rem"> See the Repository</a>
+
+            <!-- Button: closes window  -->
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- UniMap + Map Builder   -->
+    <div class="modal fade" id="MapBuilder-project" tabindex="-1" role="dialog" aria-labelledby="MB-label" aria-hidden="true">
+      <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+
+            <!-- Project: UniMap + Map Builder  -->
+            <h2 class="modal-title" id="MB-label">UniMap + Map Builder</h2>
+
+            <!-- Button: closes window  -->
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+
+            <p class="modal-text"> This is a UniMap and Map Builder!..</p>
+
+
+            <img src="./imgs/projects/MapBuilder1.png" class="img-fluid rounded">
+            <img src="./imgs/projects/MapBuilder2.png" class="img-fluid rounded">
+            <img src="./imgs/projects/MapBuilder3.png" class="img-fluid rounded">
+          </div>
+          <div class="modal-footer">
+            <!-- Button opens new page showing repository -->
+            <a class="btn btn-secondary"href="https://github.com/zachalbers/UniMap" target="_blank"><img src="./imgs/Github-Icon.png" style="height: 1.5rem; width: 1.5rem"> See the Repository</a>
+
+            <!-- Button: closes window  -->
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
 
 
     <!-- More Descriptions Here   -->
@@ -267,9 +479,6 @@
 
     <!-- Other Scripts  -->
     <script type="text/javascript" src="projectsFile.js">
-
-    </script>
-    <script type="text/javascript" src="screenPosition.js">
 
     </script>
 
