--- a/contact.html
+++ b/contact.html
@@ -51,11 +51,12 @@
       <div class="container-fluid ">
         <div class="row d-flex justify-content-center">
           <nav class="d-flex justify-content-center nav">
-            <a class="nav-link disabled h4 border-bottom" id="home-Button"> <span id="currently-Selected-Tab">Overview</span></a>
+            <a class="nav-link h4 text-primary" id="home-Button">Overview</a>
             <a class="nav-link h4 text-primary" id="projects-Button">Projects</a>
           </nav>
           <nav class="d-flex justify-content-center nav">
-            <a class="nav-link h4 text-primary" id="contact-Button">Contact</a>
+            <a class="nav-link h4 text-primary border-bottom" id="contact-Button"><span id="currently-Selected-Tab">Contact</span></a>
+            <a class="nav-link h4 text-primary" id="cpsc581-Button">CPSC 581</a>
           </nav>
         </div>
       </div>
@@ -67,101 +68,7 @@
       </div>
 
 
-<!--Highlighted Projects Container  -->
-    <div class="container mt-4 mb-5">
-      <div class="row parentTag">
 
-
-  <!--
-Use this for button popover:
-data-container="body" data-toggle="popover" data-placement="top" data-content="Click the Projects tab to see related projects">
-
-
- -->
-
-
- <!--Highlighted Projects: Project 1  -->
- <div class="col-md d-flex justify-content-center align-items-center project ios-project web-dev-project mb-5">
-   <div class="card shadow-sm" style="width: 18rem; height: 30rem;">
-     <div class="card-body" data-toggle="modal" data-target="#projectModal1">
-
-       <!-- Project: Image  -->
-       <img src="./imgs/TheNannyShackWebsite.jpg" class="img-fluid">
-
-       <!-- Project: Title  -->
-       <h5 class="card-title">The Nanny Shack</h5>
-
-       <!-- Project: Brief Descrption -->
-       <p class="card-text"> A prototype website build for a social enterprise that aims to help parents who are struggling to find affordable and flexible daycare, as well as nannies who are struggling to find secure job employment..</p>
-     </div>
-
-     <!--Project Tags  -->
-     <div class="card-footer">
-       <!-- Web Developement Tag with Popover  -->
-       <button type="button" class="btn btn-primary disabled btn-sm web-development-btn" style="font-size : 0.6rem" data-container="body" data-toggle="popover" data-placement="top" data-content="Click the Projects tab to see related projects">Web Development</button>
-       <!-- iOS Tag with Popover -->
-       <button type="button" class="btn btn-primary btn-sm disabled iOS-btn" style="font-size : 0.6rem" data-container="body" data-toggle="popover" data-placement="top" data-content="Click the Projects tab to see related projects">iOS</button>
-     </div>
-   </div>
- </div>
-
-<!--Highlighted Projects: Project 2  -->
-<div class="col-md d-flex justify-content-center align-items-center project ios-project web-dev-project mb-5">
-  <div class="card shadow-sm" style="width: 18rem; height: 30rem;">
-    <div class="card-body" data-toggle="modal" data-target="#projectModal1">
-
-      <!-- Project: Image  -->
-      <img src="./imgs/TheNannyShackWebsite.jpg" class="img-fluid">
-
-      <!-- Project: Title  -->
-      <h5 class="card-title">The Nanny Shack</h5>
-
-      <!-- Project: Brief Descrption -->
-      <p class="card-text"> A prototype website build for a social enterprise that aims to help parents who are struggling to find affordable and flexible daycare, as well as nannies who are struggling to find secure job employment..</p>
-    </div>
-
-    <!--Project Tags  -->
-    <div class="card-footer">
-      <!-- Web Developement Tag with Popover  -->
-      <button type="button" class="btn btn-primary disabled btn-sm web-development-btn" style="font-size : 0.6rem" data-container="body" data-toggle="popover" data-placement="top" data-content="Click the Projects tab to see related projects">Web Development</button>
-      <!-- iOS Tag with Popover -->
-      <button type="button" class="btn btn-primary btn-sm disabled iOS-btn" style="font-size : 0.6rem" data-container="body" data-toggle="popover" data-placement="top" data-content="Click the Projects tab to see related projects">iOS</button>
-    </div>
-  </div>
-</div>
-
-
-<!--Highlighted Projects: Project 3  -->
-<div class="col-md d-flex justify-content-center align-items-center project ios-project web-dev-project ui-design-project mb-5">
-  <div class="card shadow-sm" style="width: 18rem; height: 30rem;">
-    <div class="card-body" data-toggle="modal" data-target="#projectModal1">
-
-      <!-- Project: Image  -->
-      <img src="./imgs/buildABeer.png" class="img-fluid">
-
-      <!-- Project: Title  -->
-      <h5 class="card-title">The Nanny Shack</h5>
-
-      <!-- Project: Brief Descrption -->
-      <p class="card-text"> A prototype website build for a..</p>
-    </div>
-
-    <!--Project Tags  -->
-    <div class="card-footer">
-      <!-- UI Design Tag with Popover -->
-      <button type="button" class="btn btn-primary btn-sm disabled ui-design-btn" style="font-size : 0.6rem" data-container="body" data-toggle="popover" data-placement="top" data-content="Click the Projects tab to see related projects">iOS</button>
-      <!-- Entrepreneurship Tag with Popover -->
-      <button type="button" class="btn btn-primary btn-sm disabled enti-btn" style="font-size : 0.6rem" data-container="body" data-toggle="popover" data-placement="top" data-content="Click the Projects tab to see related projects">Entrepreneurship</button>
-    </div>
-  </div>
-</div>
-
-
-<!--New Projects Here  -->
-
-
-      </div>
-    </div>
 
 
 <!-- About Me Container -->
