--- a/CPSC581.html
+++ b/CPSC581.html
@@ -138,7 +138,7 @@
               </div>
 
               <div class="col col-md-8 col-12">
-                <img src="./imgs/cpsc581/p0/sketch01.jpg" class="img-fluid rounded">
+                <img src="./imgs/cpsc581/p0/sketch01.JPG" class="img-fluid rounded">
               </div>
 
 
