--- a/CPSC581.html
+++ b/CPSC581.html
@@ -149,14 +149,14 @@
 
 
               <div class="col col-md-6 col-12">
-                <img src="./imgs/cpsc581/p0/sketch02.jpg" class="img-fluid rounded">
+                <img src="./imgs/cpsc581/p0/sketch02.JPG" class="img-fluid rounded">
               </div>
               <!-- <div class="col col-md-3 col-12">
                 <img src="./imgs/cpsc581/p0/sketch07.jpg" class="img-fluid rounded">
               </div> -->
 
               <div class="col col-md-6 col-12">
-                <img src="./imgs/cpsc581/p0/sketch04.jpg" class="img-fluid rounded">
+                <img src="./imgs/cpsc581/p0/sketch04.JPG" class="img-fluid rounded">
               </div>
 
             </div>
@@ -175,7 +175,7 @@
 
 
                 <figure class="figure">
-                  <img src="./imgs/cpsc581/p0/sketch06.jpg" class="figure-img img-fluid rounded">
+                  <img src="./imgs/cpsc581/p0/sketch06.JPG" class="figure-img img-fluid rounded">
                   <figcaption class="figure-caption"> For this idea, I wanted to have a graphical representation of Homer, that would respond to the beer bottle / donut from being interacted with. The bottle or donut would be clicked and Homer would respond with a phrase depending on how much had been clicked so far. </figcaption>
                 </figure>
                 <br>
